src/test/resources/semantic/error/TS_ERROR_STRUCT_NO_DEFINIDO.ru
struct A{

}

impl A{
    .(){}
    fn m1(B b,T a)->void{

    }
}
struct B{

}

impl B{
    .(){
        
    }
    fn m2(C b)->void{

    }
}

start{

}